--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -15,6 +15,6 @@ COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
 
-COPY external-dns-webhook-libdns /external-dns-webhook-libdns
-USER appuser:appuser
-ENTRYPOINT ["/external-dns-webhook-libdns"]
+COPY external-dns-libdns-webhook /external-dns-libdns-webhook
+USER 10001:10001
+ENTRYPOINT ["/external-dns-libdns-webhook"]
