--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -1,20 +1,5 @@
-FROM alpine:latest as builder
-# Ca-certificates is required to call HTTPS endpoints.
-RUN apk update && apk add ca-certificates && update-ca-certificates
-RUN adduser \
-    --disabled-password \
-    --gecos "" \
-    --home "/nonexistent" \
-    --shell "/sbin/nologin" \
-    --no-create-home \
-    --uid "10001" \
-    "appuser"
-
-FROM scratch
-COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-COPY --from=builder /etc/passwd /etc/passwd
-COPY --from=builder /etc/group /etc/group
-
+FROM gcr.io/distroless/static-debian12:nonroot
 COPY external-dns-libdns-webhook /external-dns-libdns-webhook
-USER 10001:10001
+# nonroot, match external-dns default securityContext
+USER 65532:65532
 ENTRYPOINT ["/external-dns-libdns-webhook"]
